--- a/.github/workflows/update-average-intensities.yml
+++ b/.github/workflows/update-average-intensities.yml
@@ -8,7 +8,7 @@ on:
         description: 'Log level'     
         required: true
         default: 'warning'
-        
+
 jobs:
   createPullRequest:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
-          branch: average-intensities/${{ date }}
+          branch: average-intensities/job-${{ GITHUB_JOB }}
           delete-branch: true
           title: '[Example] Update report'
           body: |
